--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .header{
     display: flex;
     justify-content: center;
@@ -5,8 +10,10 @@
 }
 
 .canvas{
-background-color: whitesmoke;
     display: flex;
     justify-content: center;
-    align-items: center;
-}   
+    
+    
+}
+
+
