--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@
     padding: 0;
     margin: 0   ;
 }
+
+.canvas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 170px;
+}
+
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 90px;
+}
